@@ -6,7 +6,8 @@ urlpatterns = patterns('search.pathsearch.views',
     (r'^(?P<version>[-0-9A-Za-z]+)/$', 'index'),
     (r'^(?P<version>[-0-9A-Za-z]+)/package/(?P<package_name>[-_.0-9A-Za-z]+)/$', 'list_package_contents'),
     (r'^(?P<version>[-0-9A-Za-z]+)/package/(?P<package_name>[-_.0-9A-Za-z]+)/(?P<term>[-/_.0-9A-Za-z]+)', 'search_in_package'),
-    (r'^(?P<version>[-0-9A-Za-z]+)/packages/(?P<package_name>[-_.0-9A-Za-z]+)/$', 'search_for_package'),    
+    (r'^(?P<version>[-0-9A-Za-z]+)/packages/$', 'search_for_package'),
+    (r'^(?P<version>[-0-9A-Za-z]+)/packages/(?P<package_name>[-_.0-9A-Za-z]+)/$', 'search_for_package'),
     (r'^(?P<version>[-0-9A-Za-z]+)/(?P<term>[-_.0-9A-Za-z]+)/$', 'search_in_all_packages'),
     
 )
