@@ -5,8 +5,26 @@ from django.db import models
 from search.settings import versions, default_version
 from django.template import RequestContext
 from django.http import Http404
+from django.core.paginator import Paginator, InvalidPage, EmptyPage
+from django.http import HttpResponseRedirect
+from search.settings import LIST_SIZE
 
-
+def pager(request, entry_list, per_page=LIST_SIZE):
+    """Paginates the given resultset."""    
+    paginator = Paginator(entry_list, per_page)
+    # Make sure page request is an int. If not, deliver first page.
+    try:
+        page = int(request.GET.get('page', '1'))
+    except ValueError:
+        page = 1
+    # If page request (9999) is out of range, deliver last page of results.
+    try:
+        entries = paginator.page(page)
+    except (EmptyPage, InvalidPage):
+        entries = paginator.page(paginator.num_pages)
+    return entries
+    
+    
 def index(request, version=default_version):
     """ Index page for pathsearch. """
     if version not in versions:
@@ -19,18 +37,28 @@ def index(request, version=default_version):
             in_end = in_start + 4
             term = entry[:in_start-1]
             pkg = entry[in_end-1:]
-            return search_in_package(request, version, pkg, term)
+	    return HttpResponseRedirect("/search/%s/package/%s/%s" % (version, pkg, term))
+            #return search_in_package(request, version, pkg, term)
         
         elif entry.strip().startswith('in:'):
             pkg = entry[3:].strip()
-            return list_package_contents(request, version, pkg)
+	    return HttpResponseRedirect("/search/%s/package/%s" % (version, pkg))
+            #return list_package_contents(request, version, pkg)
         
         elif entry.strip().startswith('p:'):
             pkg = entry[2:].strip()
-            return search_for_package(request, version, pkg)
+	    return HttpResponseRedirect("/search/%s/packages/%s" % (version, pkg))
+            #return search_for_package(request, version, pkg)
             
         # If search form is submitted, redirect...
-        return search_in_all_packages(request, version)
+	group = request.GET.get('group')
+	if group:
+	    url = "/search/%s/%s?group=yes" % (version, entry)
+	else:
+	    url = "/search/%s/%s" % (version, entry)
+	
+	return HttpResponseRedirect(url)
+        #return search_in_all_packages(request, version)#,term?
     
     # If no search is done, display main page.
     return render_to_response('index.html', {'current_version':version,
@@ -38,16 +66,15 @@ def index(request, version=default_version):
 
 def list_package_contents(request, version, package_name):
     entry_list = Repo.objects.filter(repo = version.replace("-", "_"), package = package_name)
-    #TODO: Find out why underscorize? Other functions?
     
     return render_to_response('pathsearch/results.html', {
-                                                          'entry_list'      :   entry_list,
+							  'entries'	    :   pager(request, entry_list),
                                                           'package_name'    :   package_name,
                                                           'current_version'         : version,
                                                           'versions'       :versions,
                                               })
 
-def search_for_package(request, version, package_name):
+def search_for_package(request, version, package_name=""):
     """Searches for a package related to given name"""
     if not package_name.strip():
         package_list = Repo.objects.values_list('package').order_by('package').distinct().filter(repo = version.replace("-","_"))
@@ -57,15 +84,16 @@ def search_for_package(request, version, package_name):
     
     #package_list = [p.package for p in package_list]
     package_list = [p[0] for p in package_list]
+     
 
     # We have a sorting problem here!
     # package_list is the related package names.
     
     return render_to_response('pathsearch/packages.html',
-                              { 'package_list'         : package_list,
-                                'package_name'         : package_name,
-                                'current_version'      : version,
-                                'versions'              :versions,
+                              { 'entries'		: pager(request, package_list),
+                                'package_name'          : package_name,
+                                'current_version'       : version,
+                                'versions'              : versions,
                                 'q'                     : request.GET.get('q'),
                                },
                                context_instance = RequestContext(request)
@@ -73,8 +101,9 @@ def search_for_package(request, version, package_name):
 def search_in_package(request, version, package_name, term):
     """Searches for term in the given package."""
     entry_list = Repo.objects.filter(repo = version.replace("-","_"), package = package_name, path__contains=term)
+    
     return render_to_response('pathsearch/results.html', {
-                                                          'entry_list'      :   entry_list,
+							  'entries'	    :   pager(request, entry_list),
                                                           'package_name'    :   package_name,
                                                           'term'            :   term,
                                                           'current_version' : version,
@@ -82,18 +111,21 @@ def search_in_package(request, version, package_name, term):
                                               })
     
 def search_in_all_packages(request, version, term = None):
-    """Searches for term in all packages' file paths."""
-    term = term or request.POST['q']    # If no URL term specified, get the POST data.
-    group = request.POST.get('group')   # Is grouping enabled?
+    """Searches for term in all packages' file paths.
+    We have some problems here. If grouping is desired, that can't be combined with pagination.
+    So we have to send entry_list instead of entries.    
+    """
+    term = term or request.GET['q']    # If no URL term specified, get the GET data.
+    group = request.GET.get('group')   # Is grouping enabled?
 
     entry_list = Repo.objects.filter(repo = version.replace("-","_"), path__contains=term)
+    entries = entry_list if group else pager(request, entry_list)
     
     return render_to_response('pathsearch/results.html', {
-                                                          'entry_list'      :   entry_list,
-                                                          'term'            :   term,
-                                                          'group'           :   group,
+							  'entries'	    : entries,                                                          
+                                                          'term'            : term,
+                                                          'group'           : group,
                                                           'current_version' : version,
-                                                          'versions'        :  versions,
+                                                          'versions'        : versions,
                                                           
                                               })
-
